<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:id="@+id/admin_dashboard_main"
    tools:context=".uipages.AdminDashboardActivity"
    tools:theme="@style/Base.Theme.PopIn"
    >


    <ImageView
        android:id="@+id/wave_image"
        android:layout_width="535dp"
        android:layout_height="141dp"
        android:contentDescription="@string/waveDesignDescription"
        android:scaleType="centerCrop"

        android:scaleX="1"

        android:scaleY="-1"
        android:src="@drawable/wave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/AdminDashboardTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AdminDashboardTitle"
        android:textColor="?attr/colorSecondary"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.126" />

    <LinearLayout
        android:id="@+id/adminDashboardTabs"
        android:layout_width="380dp"
        android:layout_height="619dp"
        android:layout_marginHorizontal="12dp"
        android:orientation="vertical"
        android:visibility="visible"

        app:layout_constraintBottom_toTopOf="@id/bottomNav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/AdminDashboardTitle">

        <com.example.popin.reusableui.EventsFilterComponentView
            android:id="@+id/commonEventsFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvEvents"
            android:layout_width="match_parent"
            android:layout_height="222dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:paddingBottom="16dp" />


        <Button
            android:id="@+id/btnCreateEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_button"
            android:text="@string/addEvent"
            android:textAllCaps="false"
            android:textColor="@color/primary"
            app:backgroundTint="#FF8559" />

        <Button
            android:id="@+id/btnUpdateEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_button_outline"
            android:text="@string/updateEvent"
            android:textAllCaps="false"
            android:textColor="@color/primary" />

        <Button
            android:id="@+id/btnDeleteEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/deleteEvent"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@color/warning" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/sectionAddEvent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:paddingHorizontal="24dp"
        android:paddingTop="16dp"
        android:paddingBottom="24dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/btnBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/AdminDashboardTitle"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:hint="Enter the Title" />

            <EditText
                android:id="@+id/addDateTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:hint="YYYY-MM-DD-HH-mm"
                />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:hint="Enter the Location" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="Enter the Description" />

            <Button
                android:id="@+id/addEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_button"
                android:text="@string/addEvent"
                android:textAllCaps="false"
                android:textColor="@color/primary"
                app:backgroundTint="#FF8559" />

        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/sectionUpdateEvent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:visibility="gone"
        android:paddingHorizontal="24dp"
        android:paddingTop="16dp"
        android:paddingBottom="24dp"
        app:layout_constraintTop_toBottomOf="@id/AdminDashboardTitle"
        app:layout_constraintBottom_toTopOf="@id/btnBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextCurrentEventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:hint="Enter the current event name" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:hint="Enter the new title (optional)" />

            <EditText
                android:id="@+id/editDateTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:hint="YYYY-MM-DD-HH-mm (optional)"
                />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:hint="Enter the new location (optional)" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="Enter the new description (optional)" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newCapacityInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:inputType="number"
                android:hint="Enter the new Event Capacity (optional)" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_button_outline"
                android:text="@string/updateEvent"
                android:textAllCaps="false"
                android:textColor="@color/primary" />


        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/sectionDeleteEvent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:visibility="gone"
        android:paddingHorizontal="24dp"
        android:paddingTop="16dp"
        android:paddingBottom="24dp"
        app:layout_constraintTop_toBottomOf="@id/AdminDashboardTitle"
        app:layout_constraintBottom_toTopOf="@id/btnBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="Enter the event name" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:text="@string/deleteEvent"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:backgroundTint="@color/warning" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_button"
        android:text="@string/backButton"
        app:backgroundTint="#FF8559"

        android:textAllCaps="false"
        android:textColor="@color/black"
        android:visibility="gone"

        app:layout_constraintBottom_toTopOf="@id/bottomNav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.example.popin.reusableui.NavBarComponentView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottomNav"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
