<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UIpages.LogInActivity"
    tools:theme="@style/Base.Theme.PopIn"
    >

...
        app:layout_constraintStart_toEndOf="@id/emailAndPhoneIcon"
        app:layout_constraintTop_toTopOf="@id/emailAndPhoneIcon"
        app:layout_constraintBottom_toBottomOf="@id/emailAndPhoneIcon" />


    <EditText
        android:id="@+id/emailInput"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/transparent"
        android:hint="@string/emailInputHint"
        android:inputType="textEmailAddress"
...
        app:layout_constraintStart_toEndOf="@id/password_icon"
        app:layout_constraintTop_toTopOf="@id/password_icon"
        app:layout_constraintBottom_toBottomOf="@id/password_icon" />


    <EditText
        android:id="@+id/password_input"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/transparent"
        android:hint="@string/passwordInputHint"
        android:inputType="textPassword"
...
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toEndOf="@id/divider2"
        app:layout_constraintTop_toTopOf="@id/divider2"
        app:layout_constraintVertical_bias="0.818" />

    <ImageView
        android:id="@+id/eye_password_icon"
        android:layout_width="45dp"
        android:layout_height="35dp"
        android:src="@drawable/closed_eye_pass_toggle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
...
        app:layout_constraintEnd_toEndOf="@id/password_input"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/password_input"
        app:layout_constraintTop_toBottomOf="@id/password_input" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/LoginButton"
        android:layout_width="147dp"
        android:layout_height="50dp"

        android:layout_marginStart="40dp"
        android:layout_marginTop="796dp"
        android:layout_marginEnd="40dp"
...
